--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -280,4 +280,28 @@
 
   {% include '@hdbt/module/helfi_tpr/tpr-content-liftup.html.twig' %}
 
+{% elseif view_mode == 'minimal' %}
+
+  <div class="unit unit--minimal">
+    <a href="{{ url('entity.tpr_unit.canonical', { 'tpr_unit': entity.id() }) }}" class="unit__link">
+      <div class="unit__text">
+        <div class="unit__text__content">
+          <h3 class="unit__title">
+            {{ entity.label }}
+          </h3>
+          <div class="unit__info">
+            {% if content.address|render %}
+              <div class="unit__info-row unit__info-row--address">
+                {{ content.address }}
+              </div>
+            {% endif %}
+          </div>
+        </div>
+        <div class="unit__read-more">
+          {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
+        </div>
+      </div>
+    </a>
+  </div>
+
 {% endif %}
