--- a/src/scss/06_components/_eu-cookie-compliance-banner.scss
+++ b/src/scss/06_components/_eu-cookie-compliance-banner.scss
@@ -81,6 +81,10 @@
     max-width: 100%;
   }
 
+  .eu-cookie-withdraw-button {
+    display: none; // hide withdraw button from screen readers and tab lists as we're not using it.
+  }
+
   .hds-button {
     @include hds-button-colors-on-dark-bg();
     max-width: 400px;
