UHF-4919: Fix theme gold color reference

--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -137,7 +137,7 @@ $teaser-icon-size-desktop: 48px;
     }
 
     &:before {
-      background-color: var(--hdbt-color-gold--primary);
+      background-color: $color-gold;
       content: "";
       display: block;
       height: 100%;
