--- a/src/scss/06_components/paragraphs/_unit-search.scss
+++ b/src/scss/06_components/paragraphs/_unit-search.scss
@@ -156,6 +156,15 @@
   }
 }
 
+.unit-search__no-results-title {
+  @include font('h3');
+  margin-top: $spacing-and-half;
+}
+
+.unit-search__no-results-desc {
+  @include font('body');
+}
+
 // Unit search with large volume of units listed such as daycare search.
 .views--unit-search--large-volume {
   .views-row {
