--- a/src/scss/06_components/navigation/_header-top-navigation.scss
+++ b/src/scss/06_components/navigation/_header-top-navigation.scss
@@ -2,7 +2,7 @@
   // Hide on mobile
   display: none;
 
-  @include breakpoint($breakpoint-m) {
+  @include breakpoint($breakpoint-l) {
     @include font('special.navigation.header_top');
     align-items: center;
     background-color: $color-black-5;
