--- a/src/scss/06_components/navigation/_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/_mobile-navigation.scss
@@ -1,216 +1,37 @@
-$spacing-menu-item: 20px;
-$_hamburger-icon-size-mobile: $spacing-and-half;
-$_hamburger-icon-size-desktop: $spacing-double;
+// stylelint-disable no-descending-specificity
+$-header-branding-height-desktop: 87px;
+$-menu-transition-duration: 0.2s;
+$-cssnav-summary-width: 40px;
 
-// Mmenu default variables
-.mm-menu {
-  // Default MM colors.
-  --mm-color-background: var(--color-white);
-  --mm-color-background-emphasis: transparent;
-  --mm-color-background-highlight: transparent;
-  --mm-color-border: var(--color-black-20);
-  --mm-color-button: var(--color-black);
-  --mm-color-text: var(--color--black);
-  --mm-color-text-dimmed: silver;
-  --mm-shadow:0 0 10px rgba($color-black, 0.3);
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-  // Default MM positioning.
-  --mm-offset-top: 0;
-  --mm-offset-right: 0;
-  --mm-offset-bottom: 0;
-  --mm-offset-left: 0;
-
-  // Default MM sizes.
-  --mm-line-height: 20px;
-  --mm-listitem-size: $spacing-quadruple;
-  --mm-navbar-size: 0;
+// Hidden checkbox that toggles visibility of menu
+.cssmenu-toggle-checkbox {
+  height: 1px;
+  margin-left: -100vw; // We want to hide this checkbox, but leave it available, so that it's toggleable with screen readers
+  opacity: 0;
+  position: absolute;
+  user-select: none;
+  width: 1px;
 }
 
-// Hide the menu until the document is done loading.
-#mobile-navigation:not(.mm-menu) {
-  display: none;
-}
-
-// Styles for the mobile navigation.
-.mobile-navigation {
-  @include font('special.navigation.mobile_nav');
-
-  .mm-listitem {
-    min-height: $spacing-quadruple;
-
-    .menu__link {
-      --line-height: 1;
-    }
-
-    .mm-listitem__text {
-      padding: $spacing-menu-item 0 $spacing-menu-item $spacing-menu-item;
-
-      &[aria-current="page"]{
-        &::before {
-          background-color: $color-black;
-          bottom: 0;
-          content: "";
-          display: inline-block;
-          height: 100%;
-          left: 0;
-          position: absolute;
-          top: 0;
-          width: $spacing-quarter;
-        }
-      }
-    }
-
-    .mm-btn {
-      border-left: 1px solid $color-black-20;
-      height: $spacing-quadruple;
-      padding: 0;
-      width: $spacing-quadruple;
-
-      &::before {
-        @include pseudo-icon('angle-down', 25px, $color-black, flex);
-        @include rotating-icon-transition();
-        border: none;
-        height: $spacing-quadruple;
-        width: $spacing-quadruple;
-      }
-
-      &::after {
-        display: none;
-      }
-    }
-
-    &.mm-listitem_opened > .mm-btn::before {
-      transform: rotate(180deg);
-    }
-
-    .mm-panel {
-      background-color: $color-black-5;
-      border-top: 1px solid $color-black-20;
-      padding: 0;
-    }
-
-    &.menu__item--active-trail > .mm-listitem__text {
-      font-weight: $font-weight-bold;
-    }
-  }
-
-  .menu__item--level-2 {
-    align-items: center;
-    border: none;
-    display: flex;
-    min-height: $spacing-double;
-
-    &::after {
-      border: none;
-    }
-
-    .menu__link {
-      --line-height: 1.5;
-    }
-
-    .mm-listitem__text {
-      @include font('special.navigation.mobile_subnav');
-      // 16px padding for both top and bottom was just a bit too much and 8 too little.
-      padding: 14px 0 14px $spacing-double;
-
-    }
-
-    .mm-btn {
-      border: none;
-      height: $spacing-double;
-      padding: 0;
-      width: $spacing-quadruple;
-
-      &::before {
-        height: $spacing-double;
-        width: $spacing-quadruple;
-      }
-    }
-
-    .mm-panel {
-      background: $color-white;
-      border: none;
-    }
-  }
-
-  .menu__item--level-3 {
-    align-items: center;
-    border: none;
-    display: flex;
-    min-height: $spacing-double;
-
-    &::after {
-      border: none;
-    }
-
-    .mm-listitem__text {
-      @include font('special.navigation.mobile_nav');
-      // 16px padding for both top and bottom was just a bit too much and 8 too little.
-      padding: 14px 0 14px $spacing-triple;
-
-      &[aria-current="page"] {
-        &::before {
-          top: -8px;
-        }
-      }
-    }
-  }
-}
-
-// Mobile navigation footer.
-.mobile-navigation__footer {
-  @include font('small');
-  flex-shrink: 0;
-  min-height: 110px;
-  padding-top: $spacing;
-
-  .hds-koros {
-    color: $color-black;
-    padding: 0;
-  }
-
-  .header-top {
-    background-color: $color-black;
-    color: $color-white;
-    display: block;
-    padding: 0 $spacing-menu-item $spacing-double;
-    text-align: left;
-    width: 100%;
-
-    > * {
-      display: block;
-      padding: $spacing 0;
-    }
-
-    // Mmenu styles overrides.
-    a {
-      color: $color-white;
-      text-decoration: underline !important;
-
-      &::after {
-        background-color: $color-white !important;
-      }
-    }
-  }
-}
-
-// Menu trigger (burger).
-.mobile-navigation__trigger {
+// Mobile menu toggle button
+.cssmenu-toggle {
   @include font('special.navigation.icon_label');
+  align-self: center;
   cursor: pointer;
-  display: block;
-  margin-left: $spacing-half;
-  min-width: $_hamburger-icon-size-mobile;
-  order: 2;
-  padding-top: $_hamburger-icon-size-mobile + $spacing-half; // Icon should be a bit below the center axis
-  position: relative;
+  display: grid;
+  grid-area: toggle;
+  grid-template-areas:
+    'icon'
+    'label';
+  padding: 5px; // Handles spacing for 'inside' focus ring
   text-align: center;
-  text-decoration: none;
-  z-index: 10;
+  user-select: none;
+  z-index: 2;
 
-  @include breakpoint(440px) {
-    min-width: $_branding-icon-size-desktop;
-    padding-top: $_branding-icon-size-desktop + $spacing-half; // Icon should be a bit below the center axis
+  @include breakpoint($breakpoint-l) {
+    display: none;
   }
 
   &:focus,
@@ -218,73 +39,371 @@ $_hamburger-icon-size-desktop: $spacing-double;
     text-decoration: underline;
   }
 
-  @include breakpoint($breakpoint-m) {
-    order: 3;
-  }
-
-  @include breakpoint($breakpoint-l) {
-    display: none;
-  }
-
-  .hel-icon {
-    --icon-size: #{$_hamburger-icon-size-mobile};
-    display: block;
-    margin-left: 50%;
-    margin-top: - $_hamburger-icon-size-mobile;
-    position: absolute;
-    transform: translateX(-50%);
-    @include breakpoint(440px) {
-      --icon-size: #{$_hamburger-icon-size-desktop};
-      margin-top: - $_hamburger-icon-size-desktop;
-    }
-  }
-
-  &[aria-expanded="true"] .hel-icon {
-    mask-image: icon_url('cross');
+  &::before {
+    @include pseudo-icon('menu-hamburger', 32px, currentColor, block);
+    align-self: end;
+    grid-area: icon;
+    justify-self: center;
   }
 }
 
-// Override mmenu defaults.
-#mobile-navigation.mm-menu {
-  height: calc(100% - 114px);
+// Show focus ring for mobile menu toggle
+.cssmenu-toggle-checkbox:focus ~ * .cssmenu-toggle {
+  outline: 3px solid $color-black;
+  outline-offset: -3px;
+  text-decoration: underline;
+}
+
+// Text for mobile menu toggle
+.cssmenu-toggle__open,
+.cssmenu-toggle__close {
+  align-self: top;
+  grid-area: label;
+  text-align: center;
+}
+
+// Hide 'Close' text by default, but keep it in visual flow to reserve space
+.cssmenu-toggle__close {
+  visibility: hidden;
+}
+
+// Menu that opens when the toggle checkbox is checked
+.cssmenu-menu {
+  --menu-transition-duration: #{$-menu-transition-duration};
+  background: $color-white;
+  box-shadow: 0 $spacing 0 0 $color-black; // Hide rounding errors from bottom.
+  display: grid;
+  grid-area: menu;
+  grid-template-areas:
+    'lang'
+    'nav'
+    'footer';
+  grid-template-rows: auto auto 1fr;
+  height: 100vh;
+  max-height: calc(100vh - var(--drupal-toolbar-height, 0px) - var(--block-branding-height-mobile, 65px) - 1px); // Full page height - header-branding height - 1px for rounding errors
+  max-width: 100vw;
+  overflow: auto;
+  transition: max-height var(--menu-transition-duration) linear, visibility 0s linear 0s, margin-left 0s linear 0s, box-shadow 0s linear var(--menu-transition-duration);
+  visibility: visible;
 
   @include breakpoint($breakpoint-m) {
-    height: calc(100% - 135px);
+    max-height: calc(100vh - var(--drupal-toolbar-height, 0px) - $-header-branding-height-desktop - 1px);
   }
 
   @include breakpoint($breakpoint-l) {
     display: none;
   }
 
-  // Logged in with admin toolbar.
-  .toolbar-vertical & {
-    height: calc(100% - 153px);
+  @media (prefers-reduced-motion) {
+    transition: none !important;
+  }
+}
+
+// Hide .cssmenu-menu so that it's not focusable, or seen by screen readers, but can stil animate open
+.cssmenu-toggle-checkbox:not(:checked) ~ * .cssmenu-menu {
+  box-shadow: 0 0 0 0 $color-black;
+  margin-left: -200vw;
+  max-height: 0;
+  transition: max-height var(--menu-transition-duration) linear, visibility 0s linear var(--menu-transition-duration), margin-left 0s linear var(--menu-transition-duration);
+  visibility: hidden;
+}
+
+.cssmenu-menu .block--language-switcher {
+  display: none; // Hidden by default to make closing menu not show double language selectors.
+  grid-area: lang;
+  margin-left: 0;
+  margin-right: 0;
+  width: auto;
+
+  @include breakpoint($breakpoint-m) {
+    display: none;
+  }
+}
+
+// What should happen when menu is opened
+.cssmenu-toggle-checkbox:checked {
+  & ~ * .header-branding {
+    @include breakpoint(max-width $breakpoint-l) {
+      border-bottom: 0 none; // Hide header branding bottom border when menu is open and visible
+    }
+  }
+
+  & ~ * .header-branding > .block--language-switcher {
+    display: none; // Should be hidden on small sizes when menu is open // First language switcher
 
     @include breakpoint($breakpoint-m) {
-      height: calc(100% - 174px);
+      display: block; // Should be visible when second language switcher is not visible inside menu
     }
   }
 
-  // Hide "Menu" text.
-  .mm-navbar.mm-navbar_sticky {
-    display: none;
+  & ~ * .cssmenu-menu .block--language-switcher {
+    @include breakpoint(max-width $breakpoint-m) {
+      display: block; // Show second language-switcher when menu is open and first is not visible (second is hidden normally to help with animation)
+    }
   }
 
-  .mm-listitem:after {
-    left: 0;
+  & ~ * .cssmenu-toggle::before {
+    @include pseudo-icon-replace('cross'); // Switch menu toggle icon to cross when menu is open
   }
 
-  // Enable sticky footer for the menu.
-  .mm-panel {
-    display: flex;
-    flex-direction: column;
+  & ~ * .cssmenu-toggle .cssmenu-toggle__open {
+    visibility: hidden; // Hide 'Menu'-text when menu is open
   }
-  .mm-listview {
-    flex: 1 0 auto;
+
+  & ~ * .cssmenu-toggle__close {
+    visibility: visible; // Show 'Close' text when menu is open
+  }
+
+  & ~ .wrapper > *:not(.header), // All wrapper content except .header
+  & ~ .footer {
+    @include breakpoint(max-width $breakpoint-l) {
+      display: none; // Hide when menu is open and visible
+    } // Footer
   }
 }
 
-// Hide the mobile navigation footer template.
-[data-hdbt-selector="mobile-navigation-footer-template"] {
-  display: none;
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+.cssnav {
+  border-bottom: 1px solid $color-black-20;
+  grid-area: nav;
+  position: relative;
+}
+
+// Remove default list styles
+.cssnav,
+.cssnav__subnav,
+.cssnav__item {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cssnav__item {
+  background-color: var(--cssnav-bg, $color-white);
+}
+
+.cssnav__item--level-1 {
+  --cssnav-bg: #{$color-white};
+  --cssnav-fg: #{$color-black-90};
+  --cssnav-line: #{$color-black-20};
+}
+
+.cssnav__item--level-2 {
+  --cssnav-bg: #{$color-black-5};
+}
+
+.cssnav__item--level-3 {
+  --cssnav-bg: #{$color-black-10};
+  --cssnav-line: #{$color-black-30};
+}
+
+.cssnav__item--level-4 {
+  --cssnav-bg: #{$color-black-20};
+  --cssnav-line: #{$color-black-40};
+}
+
+.cssnav__item--level-5 {
+  --cssnav-bg: #{$color-black-30};
+  --cssnav-line: #{$color-black-50};
+}
+
+.cssnav__item--level-6 {
+  --cssnav-bg: #{$color-black-40};
+  --cssnav-fg: #{$color-black};
+  --cssnav-line: #{$color-black-60};
+}
+
+.cssnav__item--level-7 {
+  --cssnav-bg: #{$color-black-50};
+  --cssnav-line: #{$color-black-70};
+}
+
+.cssnav__item--level-8 {
+  --cssnav-bg: #{$color-black-60};
+  --cssnav-fg: #{$color-white};
+  --cssnav-line: #{$color-white};
+}
+
+.cssnav__item--level-9 {
+  --cssnav-bg: #{$color-black-70};
+}
+
+.cssnav__item--level-1,
+.cssnav__item--level-2:first-child {
+  border-top: 1px solid $color-black-20;
+}
+
+// .cssnav__item--level-1,
+// .cssnav__item--level-3,
+// .cssnav__item--level-5,
+// .cssnav__item--level-7,
+// .cssnav__item--level-9 {
+//   --cssnav-bg: #{$color-white};
+//   --cssnav-fg: #{$color-black-90};
+//   --cssnav-line: #{$color-black-20};
+// }
+// .cssnav__item--level-2,
+// .cssnav__item--level-4,
+// .cssnav__item--level-6,
+// .cssnav__item--level-2,
+// .cssnav__item--level-8,
+// .cssnav__item--level-10 {
+//   --cssnav-bg: #{$color-black-5};
+// }
+
+.cssnav__link {
+  box-shadow: inset 0 0 0 0 var(--cssnav-fg);
+  color: var(--cssnav-fg);
+  text-decoration: none;
+  transition: box-shadow ease-in 0.1s;
+
+  &:focus {
+    outline: 3px solid var(--cssnav-fg);
+    outline-offset: -3px;
+  }
+
+  &:hover {
+    box-shadow: inset 3px 0 0 0 var(--cssnav-fg);
+  }
+
+  &:focus,
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.cssnav__item--has-children > .cssnav__link {
+  left: 0;
+  margin-right: $-cssnav-summary-width;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+}
+
+.cssnav__link,
+.cssnav__text-mirror {
+  @include font('special.navigation.mobile_nav');
+  display: block;
+  padding: $spacing;
+}
+
+.cssnav summary {
+  display: grid;
+  grid-template-areas: 'label toggle';
+  grid-template-columns: 1fr $-cssnav-summary-width;
+  justify-content: space-between;
+  list-style: none;
+
+  &::-webkit-details-marker {
+    display: none;
+  }
+
+  &:focus {
+    outline: 0 none;
+  }
+
+  &:focus .cssnav__toggle {
+    outline: 3px solid var(--cssnav-fg);
+    outline-offset: -3px;
+  }
+}
+
+.cssnav__text-mirror {
+  color: red;
+  visibility: hidden;
+}
+
+.cssnav__item--level-2 .cssnav__link,
+.cssnav__item--level-2 .cssnav__text-mirror {
+  @include font('special.navigation.mobile_subnav');
+  padding: $spacing-half $spacing-half $spacing-half $spacing-and-half;
+}
+
+.cssnav__item--level-3 .cssnav__link,
+.cssnav__item--level-3 .cssnav__text-mirror {
+  padding-left: 32px; // previous + 8
+}
+
+.cssnav__item--level-4 .cssnav__link,
+.cssnav__item--level-4 .cssnav__text-mirror {
+  padding-left: 36px; // previous + 8
+}
+
+.cssnav__item--level-5 .cssnav__link,
+.cssnav__item--level-5 .cssnav__text-mirror {
+  padding-left: 40px; // previous + 4
+}
+
+.cssnav__item--level-6 .cssnav__link,
+.cssnav__item--level-6 .cssnav__text-mirror {
+  padding-left: 44px; // previous + 4
+}
+
+.cssnav__item--level-7 .cssnav__link,
+.cssnav__item--level-7 .cssnav__text-mirror {
+  padding-left: 48px; // previous + 4
+}
+
+.cssnav__item--level-8 .cssnav__link,
+.cssnav__item--level-8 .cssnav__text-mirror {
+  padding-left: 52px; // previous + 4
+}
+
+.cssnav__item--level-9 .cssnav__link,
+.cssnav__item--level-9 .cssnav__text-mirror {
+  padding-left: 56px; // previous + 4
+}
+
+.cssnav__link[aria-current='page'],
+.cssnav__item--in-path > .cssnav__link,
+.cssnav__item--in-path > details > summary > .cssnav__text-mirror,
+.cssnav__link[aria-current='page'] + details > summary > .cssnav__text-mirror {
+  font-weight: 700;
+}
+
+.cssnav__toggle {
+  align-items: center;
+  box-shadow: -1px 0 0 0 var(--cssnav-line);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.cssnav__toggle .visually-hidden {
+  left: 0;
+  top: 50%;
+}
+
+.cssnav__item--level-2 .cssnav__toggle {
+  box-shadow: -10px 0 0 -9px var(--cssnav-line);
+}
+
+.cssnav__toggle::before {
+  @include pseudo-icon('angle-down', $spacing-and-half, var(--cssnav-fg));
+  @include rotating-icon-transition;
+}
+
+.cssnav details[open] > summary > .cssnav__toggle::before {
+  transform: rotate(180deg);
+}
+
+.cssmenu-menu__footer {
+  background: $color-black;
+  color: $color-white;
+  grid-area: footer;
+  padding-bottom: 80px;
+  padding-top: $spacing;
+
+  .menu__link {
+    @include font('body');
+    color: $color-white;
+    display: block;
+    padding: $spacing-half $spacing;
+  }
+
+  & > .menu__link {
+    font-weight: bold;
+  }
 }
