--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -33,11 +33,27 @@
 #}
 {% set attributes = attributes.addClass('block--mobile-navigation').addClass('mobile-navigation') %}
 
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby').setAttribute('id','mobile-navigation').setAttribute('data-hdbt-selector','mobile-navigation') }} class="mobile-navigation">
+<label for="cssmenu-toggle-checkbox" class="cssmenu-toggle" role="button">
+  <span class="cssmenu-toggle__open"><span aria-label="{{ 'Open navigation menu'|t({}, {'context': 'Mobile navigation menu open button text for screen readers'}) }}">{{ 'Menu'|t }}</span></span>
+  <span class="cssmenu-toggle__close"><span aria-label="{{ 'Close navigation menu'|t({}, {'context': 'Mobile navigation menu close button text for screen readers'}) }}">{{ 'Close'|t }}</span></span>
+</label>
+
+<nav class="cssmenu-menu" aria-labelledby="cssmenu-menu-description">
+  <h2 class="visually-hidden" id="cssmenu-menu-description">{{ 'Navigation menu'|t({}, {'context': 'Mobile navigation menu description for screen readers'}) }}</h2>
+
+  {{ drupal_entity('block', 'language_switcher')}}
+
   {% block content %}
     {{ content }}
   {% endblock %}
+
+  <div class="cssmenu-menu__footer">
+    {% set link_attributes = {
+      'class': [
+        'menu__link',
+      ],
+    } %}
+    {{ link('City of Helsinki'|t, 'https://hel.fi', link_attributes) }}
+    {{ drupal_entity('block', 'headertopnavigation')}}
+  </div>
 </nav>
-<div data-hdbt-selector="mobile-navigation-footer-template">
-  {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: false } %}
-</div>
