UHF-3643: Remove extra borders from cssnav__subnav

--- a/src/scss/06_components/navigation/_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/_mobile-navigation.scss
@@ -170,6 +170,10 @@ $-cssnav-summary-width: 40px;
   position: relative;
 }
 
+.cssnav__subnav {
+  border-bottom: 0 none;
+}
+
 // Remove default list styles
 .cssnav,
 .cssnav__subnav,
