UHF-3643: Enable active link focus ring styles for safari

--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -82,6 +82,7 @@ $-branding-icon-size-desktop: $spacing-double;
         text-decoration: underline;
       }
 
+      &:active,
       &:focus {
         outline: 3px solid $color-black;
         outline-offset: -3px;
