UHF-3504: Styling for contact cards and contact card listing

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -2,6 +2,8 @@
 @import 'banner';
 @import 'chart';
 @import 'columns';
+@import 'contact-card';
+@import 'contact-card-listing';
 @import 'content-cards';
 @import 'content-liftup';
 @import 'gallery';
