UHF-3643: Fix header top navigation unique id and screen reader headings

--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -54,6 +54,7 @@
       ],
     } %}
     {{ link('City of Helsinki'|t, 'https://hel.fi', link_attributes) }}
+    {% set inside_cssmenu = true %}
     {{ drupal_entity('block', 'headertopnavigation')}}
   </div>
 </nav>
