--- a/templates/layout/region--header-top.html.twig
+++ b/templates/layout/region--header-top.html.twig
@@ -20,6 +20,12 @@
       ],
     } %}
     {{ link('hel.fi', 'https://hel.fi', link_attributes) }}
-    {{ content }}
+
+    {% set attributes_id = 'block-hdbt-subtheme-headertopnavigation'|clean_id %}
+    {% set heading_id = attributes_id ~ '-menu'|clean_id %}
+    <nav role="navigation" aria-labelledby="{{ heading_id }}" id="{{ attributes_id }}">
+      <h2{{ title_attributes.setAttribute('id', heading_id).addClass('visually-hidden') }}>{{ 'Site navigation'|t({}, {'context': 'Screenreader name for top navigation menu'}) }}</h2>
+      {{ content }}
+    </nav>
   </div>
 {% endif %}
