--- a/templates/paragraphs/paragraph--contact-card.html.twig
+++ b/templates/paragraphs/paragraph--contact-card.html.twig
@@ -42,9 +42,11 @@
         {{ content.field_contact_social_media }}
       </div>
     {% endif %}
-    <div class="contact-card--person-information contact-card--person-description">
-      {{ content.field_contact_description }}
-    </div>
+    {% if content.field_contact_description|render %}
+      <div class="contact-card--person-information contact-card--person-description">
+        {{ content.field_contact_description }}
+      </div>
+    {% endif %}
     </div>
   </div>
 {% endblock paragraph %}
